sanity checks, game launch cleanup

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -125,6 +125,10 @@ teammatchmaking.notification.inviteAlreadyInQueue.title=You are already in a que
 teammatchmaking.notification.inviteAlreadyInQueue.message=Please leave all queues before inviting a player
 teammatchmaking.notification.joinAlreadyInQueue.title=You are already in a queue
 teammatchmaking.notification.joinAlreadyInQueue.message=Please leave all queues before joining a party
+teammatchmaking.notification.customAlreadyInQueue.title=You are already in a matchmaking queue
+teammatchmaking.notification.customAlreadyInQueue.message=Please leave all queues before joining a custom game
+teammatchmaking.notification.gameAlreadyRunning.title=Already in game
+teammatchmaking.notification.gameAlreadyRunning.message=You cannot join a queue while you're in game
 teammatchmaking.queue.ladder1v1.name=Ladder 1v1
 teammatchmaking.queue.tmm2v2.name=Team 2v2
 statusBar.chatConnected=Chat connected
