Implement constant i18n key

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -656,33 +656,34 @@ replay.ratingTooltip=Average rating
 replay.qualityTooltip=Quality
 game.showRatingChange=Show rating change
 game.reasonNotValid=Game was not rated. Reason: {0}
-game.reasonNotValid.1=Too Many Desyncs
-game.reasonNotValid.2=Wrong Victory Condition
-game.reasonNotValid.3=No Fog of War
-game.reasonNotValid.4=Cheats Enabled
-game.reasonNotValid.5=Prebuilt Enabled
-game.reasonNotValid.6=No Rush Enabled
-game.reasonNotValid.7=Unit Restrictions
-game.reasonNotValid.8=Unranked Map
-game.reasonNotValid.9=Game Too Short
-game.reasonNotValid.10=Unranked Mod
-game.reasonNotValid.11=Coop Game
-game.reasonNotValid.12=Mutual Draw
-game.reasonNotValid.13=Single Player
-game.reasonNotValid.14=FFA
-game.reasonNotValid.15=Uneven Teams
-game.reasonNotValid.16=Unknown Result
-game.reasonNotValid.17=Teams Unlocked
-game.reasonNotValid.18=Multiple Teams
-game.reasonNotValid.19=Had AI
-game.reasonNotValid.20=Civilians Revealed
-game.reasonNotValid.21=Wrong Difficulty
-game.reasonNotValid.22=Expansion Disabled
-game.reasonNotValid.23=Spawn Not Fixed
-game.reasonNotValid.24=Other
+game.reasonNotValid.desync=Too Many Desyncs
+game.reasonNotValid.wrongCondition=Wrong Victory Condition
+game.reasonNotValid.fogOfWar=No Fog of War
+game.reasonNotValid.cheats=Cheats Enabled
+game.reasonNotValid.prebuilt=Prebuilt Enabled
+game.reasonNotValid.noRush=No Rush Enabled
+game.reasonNotValid.unitRestriction=Unit Restrictions
+game.reasonNotValid.unrankedMap=Unranked Map
+game.reasonNotValid.short=Game Too Short
+game.reasonNotValid.unrankedMod=Unranked Mod
+game.reasonNotValid.coop=Coop Game
+game.reasonNotValid.draw=Mutual Draw
+game.reasonNotValid.singlePlayer=Single Player
+game.reasonNotValid.ffa=FFA
+game.reasonNotValid.unevenTeams=Uneven Teams
+game.reasonNotValid.unknown=Unknown Result
+game.reasonNotValid.teamsUnlocked=Teams Unlocked
+game.reasonNotValid.multipleTeams=Multiple Teams
+game.reasonNotValid.ai=Had AI
+game.reasonNotValid.civiliansRevealed=Civilians Revealed
+game.reasonNotValid.difficulty=Wrong Difficulty
+game.reasonNotValid.expansion=Expansion Disabled
+game.reasonNotValid.spawn=Spawn Not Fixed
+game.reasonNotValid.other=Other
 game.notRatedYet=Rating change is not yet available
 game.ended=Did you enjoy "{0}"? Let other people know!
 game.rate=Rate it now
+game.valid=Game Rated
 tiles.comparator.averageRatingDescending=Sort by Average Rating Descending
 tiles.comparator.averageRatingAscending=Sort by Average Rating Ascending
 tiles.comparator.playersDescending=Sort by Players Descending
