Add report button to player context menu

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -120,6 +120,7 @@ chat.userContext.viewLiveReplay=Watch game
 chat.userContext.joinGame=Join game
 chat.userContext.viewReplays=View replays
 chat.userContext.inviteToGame=Invite to game
+chat.userContext.report=Report player
 chat.userContext.kickGame=Kick from game…
 chat.userContext.kickLobby=Kick from lobby…
 chat.userContext.ban=Ban…
