--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -97,23 +97,22 @@ ranked1v1.winLossRation=Win/loss ratio
 ranked1v1.rankingFormat=#{0,number,#}
 ranked1v1.notification.title=1v1 ranked match available
 ranked1v1.notification.message=Click here to open the 1v1 tab
-teammatchmaking.leaveParty=LEAVE PARTY
-teammatchmaking.invitePlayer=INVITE PLAYERS
+teammatchmaking.leaveParty=Leave party
+teammatchmaking.invitePlayer=Invite players
 teammatchmaking.invite=Invite
-teammatchmaking.playersInQueue=IN QUEUE: {0,number,#}
-teammatchmaking.queuePopTimer=STARTING: {0,number,0}:{1,number,00}
-teammatchmaking.clan=[CLAN]:
-teammatchmaking.rating=RATING: {0,number,#}
-teammatchmaking.1v1Rating=1V1 RATING: {0,number,#}
-teammatchmaking.teamRating=TEAMGAME RATING: {0,number,#}
-teammatchmaking.gameCount=GAMES PLAYED: {0,number,#}
+teammatchmaking.playersInQueue=In Queue: {0,number,#}
+teammatchmaking.queuePopTimer=Starting: {0,number,0}:{1,number,00}
+teammatchmaking.rating=Rating: {0,number,#}
+teammatchmaking.1v1Rating=1v1 rating: {0,number,#}
+teammatchmaking.teamRating=Teamgame rating: {0,number,#}
+teammatchmaking.gameCount=Games played: {0,number,#}
 teammatchmaking.notification.invite.title=Invited to party
 teammatchmaking.notification.invite.message={0} has invited you to join their party
 teammatchmaking.notification.invite.join=Join
-teammatchmaking.hint=SELECT QUEUES BELOW AND WAIT FOR MATCH
-teammatchmaking.play=PLAY FORGED ALLIANCE FOREVER
-teammatchmaking.playerTitle=PLAYING MATCHMAKING AS:
-teammatchmaking.partyTitle=YOUR PARTY:
+teammatchmaking.hint=Select queues below and wait for match
+teammatchmaking.play=Play forged alliance forever
+teammatchmaking.playerTitle=Playing matchmaking as:
+teammatchmaking.partyTitle=Your party:
 statusBar.chatConnected=Chat connected
 statusBar.chatConnecting=Connecting to chat…
 statusBar.chatDisconnected=Chat disconnected
