Add new heading for queue area

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -111,6 +111,7 @@ teammatchmaking.notification.invite.message={0} has invited you to join their pa
 teammatchmaking.notification.invite.join=Join
 teammatchmaking.playerTitle=Playing matchmaking as:
 teammatchmaking.partyTitle=Your party:
+teammatchmaking.queueTitle=Join queues when you are ready:
 statusBar.chatConnected=Chat connected
 statusBar.chatConnecting=Connecting to chat…
 statusBar.chatDisconnected=Chat disconnected
