Allow blacklisting of maps from map vault

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -160,6 +160,7 @@ game.create.mapSize=Map Size
 games.create.maxRating=Max.
 games.showPasswordProtectedGames=Show private games
 games.showModdedGames=Show modded games
+games.showBlacklistedMaps=Show blacklisted maps
 games.noGamesAvailable=There are no open games. Why don't you create one?
 games.couldNotJoin=Game could not be joined. See error message below.
 game.create.connecting=Waiting for connection
@@ -361,6 +362,10 @@ mapVault.mostPlayed=Most played
 mapVault.installButtonFormat=Install ({0})
 mapVault.install=Install
 mapVault.uninstall=Uninstall
+mapVault.blacklist=Blacklist
+mapVault.whitelist=Whitelist
+mapVault.removeBlacklist=Remove from Blacklist
+mapVault.removeWhitelist=Remove from Whitelist
 vault.upload=Upload…
 mod.description=Description
 mod.comments=Comments
