--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -112,6 +112,10 @@ teammatchmaking.notification.invite.join=Join
 teammatchmaking.playerTitle=Playing matchmaking as:
 teammatchmaking.partyTitle=Your party:
 teammatchmaking.queueTitle=Join queues when you are ready:
+teammatchmaking.queue.ladder1v1.fullName=Ranked 1v1
+teammatchmaking.queue.ladder1v1.shortName=1v1
+teammatchmaking.queue.tmm2v2.fullName=Ranked 2v2
+teammatchmaking.queue.tmm2v2.shortName=2v2
 statusBar.chatConnected=Chat connected
 statusBar.chatConnecting=Connecting to chat…
 statusBar.chatDisconnected=Chat disconnected
