League Leaderboard mockup

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -38,8 +38,8 @@ main.vault=Vault
 main.units=Units
 main.leaderboards=Leaderboards
 main.tournaments=Tournaments
-leaderboard.ranked1v1=1v1 Rating
-leaderboard.global=Global Rating
+leaderboard.ranked1v1=1v1 League
+leaderboard.global=2v2 League
 play.custom=Custom games
 play.ranked1v1=1v1 ranked match
 play.coop=Co-Op
