League Leaderboard logic WIP

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -40,6 +40,7 @@ main.leaderboards=Leaderboards
 main.tournaments=Tournaments
 leaderboard.ranked1v1=1v1 League
 leaderboard.global=2v2 League
+leaderboard.divisionName={0} {1}
 play.custom=Custom games
 play.ranked1v1=1v1 ranked match
 play.coop=Co-Op
