--- a/src/main/resources/i18n/messages_zh.properties
+++ b/src/main/resources/i18n/messages_zh.properties
@@ -427,17 +427,22 @@ settings.windowTitle = 设置
 settings.general = 一般
 settings.general.rememberLastTab = 记住我上次打开的选项卡
 settings.chat = 聊天
+# Fuzzy
 settings.chat.maxMessages = 消息历史大小
 settings.chat.previews = 预览
+# Fuzzy
 settings.chat.previewImages = 将鼠标移至在URL上显示预览图像
 settings.chat.colors = 颜色
+# Fuzzy
 settings.chat.timeFormat = 时间格式
 settings.chat.colorMode.default = 默认：所有用户使用默认颜色
 settings.chat.colorMode.custom = 自定义：允许特定用户的自定义颜色
 settings.chat.colorMode.random = 随机：所有用户的颜色随机
 settings.chat.foes = 敌人
+# Fuzzy
 settings.chat.hideFoe = 隐藏敌人的消息
 settings.notifications = 通知
+# Fuzzy
 settings.notifications.enableNotifications = 启用通知
 settings.notifications.toastPosition = 通知弹窗位置
 settings.notifications.toastScreen = 屏幕
@@ -445,11 +450,14 @@ settings.notifications.playSound = 游戏音乐
 settings.notifications.pmReceived = 收到私信
 settings.notifications.ranked1v1 = 1v1排名可用
 settings.sounds = 声音
+# Fuzzy
 settings.sounds.enable = 启用声音
 settings.fa.title = Forged Alliance Forever
 settings.fa.gameConfiguration = 游戏配置
+# Fuzzy
 settings.fa.autoDownloadMaps = 自动下载缺失的地图
 settings.fa.gamePort = 游戏端口
+# Fuzzy
 settings.fa.gameLocation = 游戏目录（例如“C\:\\\\Games\\\\Supreme Commander - Forged Alliance”）
 # Fuzzy
 settings.fa.executableDecorator = 可执行文件的命令行格式
@@ -538,6 +546,7 @@ userInfo.nameHistory.date = 更改日期
 userInfo.nameHistory.noHistory = 该用户从未改变过名字
 userInfo.nameHistory.name = 名称
 userInfo.nameHistory.errorLoading = 名称历史记录无法加载。
+# Fuzzy
 settings.chat.notifyOnAtMentionOnly = 只有在被@用户名时才会通知。
 settings.chat.notifications = 通知
 mod.displayName = 名字
@@ -576,6 +585,7 @@ menu.connect = 正在连接
 gameChosen.invalidPath = 无效路径
 gameChosen.couldNotLocatedGame = 指定位置没有找到最高指挥官：钢铁联盟（Commander\: Forged Alliance）。
 userInfo.statistics.errorLoading = 无法加载统计信息
+# Fuzzy
 settings.general.unitDatabase = 单位数据库
 # What is it?
 unitDatabase.rackover = 列表
@@ -605,6 +615,7 @@ settings.notifications.toastPreview.title = 预览概述
 settings.notifications.toastPreview.text = 这就是它的样子。
 settings.language.helpUs.text = Downlord's FAF Client's 多语言计划是一项社区计划。如果你想看到客户翻译成另一种语言,我们很乐意见到您的帮助。
 settings.language.helpUs.button = 帮助我们翻译
+# Fuzzy
 settings.chat.chatFormat = 聊天格式
 settings.chat.chatFormat.extended = 扩展
 settings.chat.chatFormat.compact = 紧凑
@@ -640,12 +651,13 @@ map.couldNotHide = 无法隐藏地图。
 map.couldNotUnrank = 无法取消地图排名。
 modVersion.ranked = 排名
 game.missionName = 任务
-settings.appearance.backgroundImage = 背景图像
+settings.appearance.backgoundImage = 背景图像
 settings.appearance.useDefaultImage = 使用默认图像
 settings.appearance.chooseImage = 选择图像
 settings.general.theme.useNoImage = 无图像
 query.notContains = 不包括
 coop.unknownMission = 未知任务
 game.couldNotJoin = 无法加入 ID ID 为"{0}"的游戏。
-settings.general.disallowDiscordJoins = 禁止玩家通过 Discord 加入
+discord.disallowJoins = 禁止玩家通过 Discord 加入
+# Fuzzy
 replay.couldNotOpen = 无法打开 ID"{0}"的录像。
