Update messages_cs.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_cs.properties
+++ b/src/main/resources/i18n/messages_cs.properties
@@ -421,17 +421,22 @@ settings.windowTitle = Nastavení
 settings.general = Obecné
 settings.general.rememberLastTab = Pamatovat si poslední otevřenou záložku
 settings.chat = Chat
+# Fuzzy
 settings.chat.maxMessages = Velikost historie zpráv
 settings.chat.previews = Náhled
+# Fuzzy
 settings.chat.previewImages = Náhled odkazů na obrázky při přejetí kurzorem
 settings.chat.colors = Barvy
+# Fuzzy
 settings.chat.timeFormat = Formát času
 settings.chat.colorMode.default = Výchozí\: Použít výchozí barvy pro všechny uživatele
 settings.chat.colorMode.custom = Vlastní\: Povolit vlastní barvy pro konkrétní uživatele
 settings.chat.colorMode.random = Náhodné\: každý uživatel má unikátní, náhodnou barvu
 settings.chat.foes = Nepřátelé
+# Fuzzy
 settings.chat.hideFoe = Schovat zprávy od nepřátel
 settings.notifications = Oznámení
+# Fuzzy
 settings.notifications.enableNotifications = Povolit oznámení
 settings.notifications.toastPosition = Pozice
 settings.notifications.toastScreen = Obrazovka
@@ -439,12 +444,16 @@ settings.notifications.playSound = Přehrát zvuk
 settings.notifications.pmReceived = Soukromá zpráva
 settings.notifications.ranked1v1 = Dostupný 1v1 hodnocený hra
 settings.sounds = Zvuky
+# Fuzzy
 settings.sounds.enable = Zapnout zvuky
 settings.fa.title = Forged Alliance Forever
 settings.fa.gameConfiguration = Nastavení hry
+# Fuzzy
 settings.fa.autoDownloadMaps = Automaticky stahovat chybějící mapy
 settings.fa.gamePort = Herní port
+# Fuzzy
 settings.fa.gameLocation = Umístění hry
+# Fuzzy
 settings.fa.executableDecorator = Formát příkazovéo řádku pro spuštění
 settings.fa.executionDirectory = Složka spuštění
 settings.fa.advanced = Pokročílé
@@ -531,6 +540,7 @@ userInfo.nameHistory.date = Datum změny
 userInfo.nameHistory.noHistory = Tento uživatel si jméno nikdy nezměnil
 userInfo.nameHistory.name = Jméno
 userInfo.nameHistory.errorLoading = Nelze načíst historii jmen.
+# Fuzzy
 settings.chat.notifyOnAtMentionOnly = Upozornit pouze při zmínění s @jméno.
 settings.chat.notifications = Oznámení
 mod.displayName = Název
@@ -567,6 +577,7 @@ menu.connect = Připojování
 gameChosen.invalidPath = Neplatná cesta
 gameChosen.couldNotLocatedGame = Vybraná cesta neobsajuje platnou instalaci Supreme Commander\: Forged Alliance.
 userInfo.statistics.errorLoading = Nelze načíst statistiky
+# Fuzzy
 settings.general.unitDatabase = Databáze jednotek
 unitDatabase.rackover = Rackover
 unitDatabase.spooky = Spooky
@@ -592,6 +603,7 @@ settings.notifications.toastPreview.title = Ukázka upozornení
 settings.notifications.toastPreview.text = Takto to vypadá.
 settings.language.helpUs.text = Překlad Downlordova FAF klienta je komunitní záležitost. Pokud ho chceš mít přeložený do jiného jazyka, uvítáme Tvou pomoc.
 settings.language.helpUs.button = Pomoz nám s překladem
+# Fuzzy
 settings.chat.chatFormat = Formát chatu
 settings.chat.chatFormat.extended = Rozšířený
 settings.chat.chatFormat.compact = Kompaktní
@@ -624,13 +636,14 @@ map.hidden = Schované
 map.hide = Schovat
 map.couldNotHide = Mapu nešlo schovat.
 game.missionName = Mise
-settings.appearance.backgroundImage = Obrázek na pozadí
+settings.appearance.backgoundImage = Obrázek na pozadí
 settings.appearance.useDefaultImage = Použít výchozí obrázek
 settings.appearance.chooseImage = Vybrat obrázek
 settings.general.theme.useNoImage = Žádný obrázek
 query.notContains = neobsahuje
 coop.unknownMission = Neznámá mise
 game.couldNotJoin = Nelze se připojit do hry s id ''{0}''.
+# Fuzzy
 replay.couldNotOpen = Záznam hry číslo\: "{0}" , nelze otevřít.
 view.showSidePane = Více detailů
 view.hideSidePane = Méně detailů
@@ -702,3 +715,6 @@ replay.abortAfterMapNotFound = Zrušit a zobrazit více informací
 replay.mapDownloadFailed = Selhalo stahování mapy pro tento záznam
 map.unknown = neznámý
 gameSelect.select.invalidPath = Neplatná cesta
+main.news = Novinky
+game.create.defaultGameTypeMarker = (výchozí)
+startTab.save = Uložit
