Update messages_nl.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_nl.properties
+++ b/src/main/resources/i18n/messages_nl.properties
@@ -423,17 +423,22 @@ settings.windowTitle = Instellingen
 settings.general = Algemeen
 settings.general.rememberLastTab = Onthou mijn laatst geopende tab
 settings.chat = Chat
+# Fuzzy
 settings.chat.maxMessages = Bericht geschiedenis grootte
 settings.chat.previews = Voorvertoning
+# Fuzzy
 settings.chat.previewImages = Voorbeeld afbeelding URLs bij overgaan met muis
 settings.chat.colors = Kleuren
+# Fuzzy
 settings.chat.timeFormat = Formaat tijd
 settings.chat.colorMode.default = Standaard\: Gebruik standaard kleuren voor alle spelers
 settings.chat.colorMode.custom = Aangepast\: Sta aangepaste kleuren voor specifieke spelers toe
 settings.chat.colorMode.random = Willekeurig\: Iedere speler heeft een uniek, willekeurige kleur
 settings.chat.foes = Vijanden
+# Fuzzy
 settings.chat.hideFoe = Verberg berichten vijand
 settings.notifications = Notificaties
+# Fuzzy
 settings.notifications.enableNotifications = Zet notificaties aan
 settings.notifications.toastPosition = Positie berichten
 settings.notifications.toastScreen = Beeld
@@ -441,12 +446,16 @@ settings.notifications.playSound = Speel geluid
 settings.notifications.pmReceived = PM ontvangen
 settings.notifications.ranked1v1 = Geclassificeerde 1v1 beschikbaar
 settings.sounds = Geluiden
+# Fuzzy
 settings.sounds.enable = Zet geluiden aan
 settings.fa.title = Forged Alliance Forever
 settings.fa.gameConfiguration = Spel configuratie
+# Fuzzy
 settings.fa.autoDownloadMaps = Download missende mappen automatisch
 settings.fa.gamePort = Spel poort
+# Fuzzy
 settings.fa.gameLocation = Spel locatie
+# Fuzzy
 settings.fa.executableDecorator = Invoer formaat voor uitvoering
 settings.fa.executionDirectory = Uitvoeringsmap
 settings.fa.advanced = Geavanceerd
@@ -533,6 +542,7 @@ userInfo.nameHistory.date = Datum van verandering
 userInfo.nameHistory.noHistory = De gebruiker heeft nooit zijn naam veranderd
 userInfo.nameHistory.name = Naam
 userInfo.nameHistory.errorLoading = Naam Geschiedenis kan niet geladen worden.
+# Fuzzy
 settings.chat.notifyOnAtMentionOnly = Maak het alleen aan mij bekend via @username. 
 settings.chat.notifications = Notificaties
 mod.displayName = Naam
@@ -569,6 +579,7 @@ menu.connect = Verbinden
 gameChosen.invalidPath = Ongeldig adres
 gameChosen.couldNotLocatedGame = De gespecificeerde locatie bevat niet een gevalideerde Supreme Commander\: Forged Alliance installatie.
 userInfo.statistics.errorLoading = Kan geen statistieken laden
+# Fuzzy
 settings.general.unitDatabase = Eenheid database
 unitDatabase.rackover = Eenheid raster
 unitDatabase.spooky = Spookachtig
@@ -594,6 +605,7 @@ settings.notifications.toastPreview.title = Voorbeeld titel
 settings.notifications.toastPreview.text = Dit is hoe het er uit ziet.
 settings.language.helpUs.text = Downlord's FAF Client's localisatie is een gemeenschapsinspanning. Als je de client in een andere taal vertaald wilt zien waarderen we jouw help.
 settings.language.helpUs.button = Help ons vertalen
+# Fuzzy
 settings.chat.chatFormat = Chat formaat
 settings.chat.chatFormat.extended = Uitgebreid
 settings.chat.chatFormat.compact = Compact
@@ -628,14 +640,15 @@ map.couldNotHide = Kan map niet verbergen.
 map.couldNotUnrank = Kan de map niet sorteren.
 modVersion.ranked = Gesorteerd
 game.missionName = Missie
-settings.appearance.backgroundImage = Achtergrondafbeelding
+settings.appearance.backgoundImage = Achtergrondafbeelding
 settings.appearance.useDefaultImage = Gebruik de standaard afbeelding
 settings.appearance.chooseImage = Kies een afbeelding
 settings.general.theme.useNoImage = Geen afbeelding
 query.notContains = Bevat niet
 coop.unknownMission = Onbekende missie
 game.couldNotJoin = Kon niet deelnemen aan het spel met id id ''{0}'''.
-settings.general.disallowDiscordJoins = Spelers niet toestaan om deel te nemen via Discord
+discord.disallowJoins = Spelers niet toestaan om deel te nemen via Discord
+# Fuzzy
 replay.couldNotOpen = Replay met id ''{0}''', kon niet worden geopend.
 view.showSidePane = Toon details
 view.hideSidePane = Verberg details
@@ -667,8 +680,10 @@ mapVault.recommended = M&M Team Top Keuzes
 settings.appearance.useNone = Geen afbeelding gebruiken
 settings.chat.addAutoJoinChannel = Kanaal toevoegen
 settings.chat.removeAutoJoinChannel = Verwijderen
+# Fuzzy
 settings.chat.autoJoinChannelList = Autojoin kanalen
 settings.chat.autoJoinChannelPrompt = Deelnemen aan kanaal (\#channel_name)
+# Fuzzy
 settings.fa.forceRelay = Doorstuur-verbinding forceren
 game.player.globalRating = Een van de spelers globale classificering
 game.player.ladderRating = Een van de spelers ladder classificering
@@ -713,7 +728,9 @@ mapVault.installationFailed = Map installatie mislukt voor map "{0}" met bericht
 tutorial.loading = Handleidingen laden
 tutorial.noneAvailable = Er zijn momenteel geen handleidingen
 clientUpdateAvailable.prereleaseNotification = Prerelease {0} is beschikbaar ({1})
+# Fuzzy
 settings.checkForPrerelease = Checken voor prerelease
+# Fuzzy
 settings.prereleaseFeedback = Geef feedback voor prereleases op discord
 settings.giveFeedback = Open
 server.kicked.title = U bent verwijderd
@@ -740,6 +757,7 @@ replay.mapDownloadFailed = Map download mislukt voor deze replay
 replay.mapDownloadFailed.wannaContinue = We konden de kaart die in het replay-bestand wordt genoemd niet vinden. Het spel kan echter nog steeds weten waar het te vinden is. Beschouw dit als de waarschuwing dat deze replay misschien niet werkt.
 map.unknown = niet bekend
 settings.account.goWebsite = Voor de meeste account-gerelateerde activiteiten moet je onze website bezoeken.
+# Fuzzy
 settings.account.goWebsiteButton = Bezoek de Faforever website
 map.versionId = Map versie ID
 vault.replays.ownReplays = Jouw replays
