Update messages_fr.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_fr.properties
+++ b/src/main/resources/i18n/messages_fr.properties
@@ -440,17 +440,22 @@ settings.windowTitle = Paramètres
 settings.general = Général
 settings.general.rememberLastTab = Mémoriser le dernier onglet ouvert
 settings.chat = Chat
+# Fuzzy
 settings.chat.maxMessages = Taille de l'historique du chat
 settings.chat.previews = Prévisualisation
+# Fuzzy
 settings.chat.previewImages = Afficher le lien des images lors du survol de la souris
 settings.chat.colors = Couleurs
+# Fuzzy
 settings.chat.timeFormat = Format du temps
 settings.chat.colorMode.default = Défaut \: Couleurs par défaut pour tous les utilisateurs
 settings.chat.colorMode.custom = Personnalisé \: Couleurs personnalisées pour certains utilisateurs
 settings.chat.colorMode.random = Aléatoire \: Chaque utilisateur a une couleur aléatoire spécifique.
 settings.chat.foes = Ennemis
+# Fuzzy
 settings.chat.hideFoe = Cacher les messages des ennemis
 settings.notifications = Notifications
+# Fuzzy
 settings.notifications.enableNotifications = Activer les notifications
 # Toast ?
 settings.notifications.toastPosition = Infobulle de notification
@@ -459,12 +464,16 @@ settings.notifications.playSound = Jouer un son
 settings.notifications.pmReceived = MP reçu
 settings.notifications.ranked1v1 = Match 1c1 prêt
 settings.sounds = Sons
+# Fuzzy
 settings.sounds.enable = Activer les sons
 settings.fa.title = Forged Alliance Forever
 settings.fa.gameConfiguration = Configuration du jeu
+# Fuzzy
 settings.fa.autoDownloadMaps = Télécharger les cartes manquantes automatiquement
 settings.fa.gamePort = Port du jeu
+# Fuzzy
 settings.fa.gameLocation = Emplacement du jeu
+# Fuzzy
 settings.fa.executableDecorator = Ligne de commande personnalisée
 settings.fa.executionDirectory = Dossier d'exécution
 settings.fa.advanced = Avancé
@@ -551,6 +560,7 @@ userInfo.nameHistory.date = Date du changement
 userInfo.nameHistory.noHistory = Cette utilisateur n'a pas d'alias
 userInfo.nameHistory.name = Nom
 userInfo.nameHistory.errorLoading = Impossible de charger les alias
+# Fuzzy
 settings.chat.notifyOnAtMentionOnly = Notifier uniquement lors d'une mention @
 settings.chat.notifications = Notifications
 mod.displayName = Nom
@@ -587,6 +597,7 @@ menu.connect = Connection
 gameChosen.invalidPath = Emplacement invalide
 gameChosen.couldNotLocatedGame = L'emplacement indiqué ne contient pas d'installation valide de SC\:FA.
 userInfo.statistics.errorLoading = Impossible de charger les statistiques
+# Fuzzy
 settings.general.unitDatabase = Liste des unités
 unitDatabase.rackover = Rackover
 unitDatabase.spooky = Spooky
@@ -612,6 +623,7 @@ settings.notifications.toastPreview.title = Miniature de notification
 settings.notifications.toastPreview.text = Voilà le résultat.
 settings.language.helpUs.text = Le client FAForever de Downlord est un projet communautaire. Si vous souhaitez contribuer à la traduction du client, n'hésitez pas à nous le faire savoir.
 settings.language.helpUs.button = Traduire le client
+# Fuzzy
 settings.chat.chatFormat = Messagerie
 settings.chat.chatFormat.extended = Large
 settings.chat.chatFormat.compact = Compacte
@@ -647,12 +659,139 @@ map.couldNotHide = Impossible de cacher la carte
 map.couldNotUnrank = Impossible de déclasser la carte
 modVersion.ranked = Classée
 game.missionName = Mission
-settings.appearance.backgroundImage = Papier peint
+settings.appearance.backgoundImage = Papier peint
 settings.appearance.useDefaultImage = Image par défaut
 settings.appearance.chooseImage = Choisir l'image
 settings.general.theme.useNoImage = Pas d'image
 query.notContains = ne contient pas
 coop.unknownMission = Mission inconnue
 game.couldNotJoin = Impossible de rejoindre "{0}"
-settings.general.disallowDiscordJoins = Empêcher de rejoindre par discord
+discord.disallowJoins = Empêcher de rejoindre par discord
+# Fuzzy
 replay.couldNotOpen = La rediffusion {0} n'a pas pu être chargée
+view.showSidePane = Montrer les détails
+view.hideSidePane = Cacher les détails
+menu.revealReplayFolder = Ouvrir le dossier des rediffusions
+menu.revealGamePrefsFile = Ouvrir le fichier des préférences du jeu
+ranked1v1.queuePopTimer = Correspondance entre {0,number,0}\:{1,number,00}
+game.create.generatedMap = Générer une nouvelle carte
+game.avgRating.format = {0,number,\#}
+game.mapGeneration.notification.title = Génération de la carte...
+game.mapGeneration.notification.message = Veuillez patienter. (Version\: {0}, seed\: {1})
+game.mapGeneration.failed.title = La génération de carte a échouée
+game.mapGeneration.failed.message = La carte demandée n'a pas pu être générée, le processus de génération de carte ne s'est pas terminé dans le délai imparti. Processus de fermeture.
+game.mapGeneration.downloadGenerator.title = Téléchargement du générateur de carte version {0}\n
+game.mapGeneration.generateMap.title = Génération de la carte en cours... (Version\: {0}, Seed\: {1})
+login.environment = Environnement
+login.button.downloadUpdate = Télécharger la dernière version
+login.button.downloadPreparing = Téléchargement en préparation
+login.button.downloadProgress = Télécharge à {0, nombre, 0%}
+login.clientTooOldError = Cette version du client {0} est trop ancienne pour continuer. Le serveur nécessite au moins la version {1}. Veuillez mettre à jour vers une version plus récente.
+login.ircServerHost = Hôte du serveur IRC
+login.withEmailWarning = Merci de vous identifier avec votre nom d'utilisateur au lieu de votre email
+vault.next = Suivant
+vault.previous = Précédent
+vault.currentPage = Page\: {0,number,\#}
+mapVault.recommended = Meilleurs choix de l'équipe M&M
+settings.appearance.useNone = N'utilisez aucune image
+settings.chat.addAutoJoinChannel = Ajouter un canal
+settings.chat.removeAutoJoinChannel = Retirer
+# Fuzzy
+settings.chat.autoJoinChannelList = Canaux à connexion automatique
+settings.chat.autoJoinChannelPrompt = Entrez sur le canal (\#channel_name)
+# Fuzzy
+settings.fa.forceRelay = Forcer la connexion relai
+game.player.globalRating = L'une des cotes globale du joueur
+game.player.ladderRating = L'un des classements du joueur
+userInfo.foe = Ce joueur est votre ennemi
+userInfo.friend = Ce joueur est votre ami
+error.game.notTerminatedCorrectly = Le jeu ne s'est pas terminé correctement et certains fichiers sont toujours ouverts. Certains fichiers du jeu installé n'ont pas pu être copiés sur FAF mais à moins que vous n'ayez récemment modifié les fichiers du jeu dans la version installée, cela ne vous concerne probablement pas. Nous démarrons toujours le jeu pour vous.
+map.id = \#{0}
+mapGenerator.generationFailed = Une erreur s'est produite durant la génération de la carte
+revert.alreadySymlinked = Revert this I got it symlinked
+mapDir.changed.noneAscii = Nous avons détecté que vous avez un nom d'utilisateur avec des caractères spéciaux et déplacé votre répertoire de coffre-fort vers un emplacement de secours.
+mapDir.changed.unix = Nous avons détecté que vous disposez d'un système Unix et déplacé votre répertoire de coffre-fort vers un emplacement de secours
+mapDir.changed.oneDrive = Nous avons détecté que vous utilisez OneDrive pour vos documents et déplacé votre répertoire de coffre-fort vers un emplacement de secours.
+settings.use.secondaryVaultLocation = Utilisez l'emplacement du coffre-fort de secours. Vous souhaitez l'utiliser si le téléchargement de cartes / mods a des problèmes et que le jeu ne trouve pas de cartes / mods.
+help.title = Aperçu des liens
+linksTecHelpDiscord = Aide technique sur Discord
+linksTecHelpForum = Aide technique sur le forum
+# Even tho shown as not used the following messages are used
+linksRules = Règles
+linksModerationReport = Formulaire de signalement
+linksDiscord = Discord
+linksFacebook = Facebook
+linksDevNews = Dev Blog
+linksYoutube = YouTube
+settings.use.advancedIceLog = Écrivez des informations avancées dans un fichier supplémentaire sur l'adaptateur ice.
+mapVault.upload.rules = Je confirme avoir lu le règlement d'ajout des cartes
+mapVault.upload.openRules = Montrer le réglement
+gameQuality.undefined = -
+chat.userContext.kickGame = Ejecté du jeu…
+chat.userContext.kickLobby = Ejecté du lobby…
+moderator.ban.reason = raison du ban
+moderator.ban.duration = durée du bannissement
+moderator.ban.success = éjecté et banni avec succès
+moderator.ban.user = Bannir l'utilisateur "{0}"\:
+main.tutorials = Tutoriels
+tutorial.category = Catégorie
+tutorial.tutorial = Tutoriels
+tutorial.launch = Lancer les tutoriels
+tutorial.mapName = Nom de la Carte\: {0}
+tutorial.launchFailed = Le lancement du tutoriel à échoué
+mapVault.installationFailed = L'installation de la carte a échoué pour la carte '' {0} '' avec le message '' {1} ''
+tutorial.loading = Chargement du tutoriel
+tutorial.noneAvailable = Il n'y a actuellement pas de tutoriels
+clientUpdateAvailable.prereleaseNotification = La prerelease {0} est disponible ({1})  
+# Fuzzy
+settings.checkForPrerelease = Vérifier si une prerelease est disponible
+# Fuzzy
+settings.prereleaseFeedback = Donnez vos impressions pour les prerelease sur Discord
+settings.giveFeedback = Ouvrir
+server.kicked.title = Vous avez été éjecté
+server.kicked.message = Vous avez été éjecté de FAF par un modérateur. Merci de consulter le règlement du lobby/jeu ici {0}
+game.kicked.title = Vous avez été éjecté du jeu
+game.kicked.message = Le jeu a été fermé par un modérateur. Merci de consulter le règlement du lobby/jeu ici {0}
+game.ratingRange = Plage de notation
+game.averageRating = Notation moyenne
+tiles.comparator.averageRatingDescending = Classer par notation moyenne décroissante
+tiles.comparator.averageRatingAscending = Classer par notation moyenne croissante
+replay.dateTooltip = Date de démarrage
+replay.timeTooltip = Temps de démarrage
+replay.modTooltip = Mod en vedette
+replay.durationTooltip = Temps réel
+replay.replayDurationTooltip = Durée de la rediffusion
+replay.playerCountTooltip = Joueurs
+replay.ratingTooltip = Note moyenne
+replay.qualityTooltip = Qualité
+mod.uploader.login = Uploader
+mapVault.upload.openValidation = Valider les métadonnées
+replay.ignoreMapNotFound = Ignorer et démarrer la rediffusion
+replay.abortAfterMapNotFound = Annuler et afficher plus d'informations
+replay.mapDownloadFailed = Le téléchargement de la carte pour rediffusion a échoué
+replay.mapDownloadFailed.wannaContinue = Nous n'avons pas pu trouver la carte mentionnée dans le fichier de rediffusion. Cependant, le jeu peut encore savoir où le trouver. Considérez ceci comme un avertissement, car la rediffusion pourrait être interrompue.
+map.unknown = inconnu
+settings.account.goWebsite = Pour la plupart des activités liées au compte, veuillez visiter notre site Web
+# Fuzzy
+settings.account.goWebsiteButton = Visiter le site web de FAForever
+map.versionId = Version ID de la carte
+vault.replays.ownReplays = Vos rediffusions
+modVault.details.uploader = Uploadé par\: {0}
+modVault.details.author = Crée par\: {0}\n
+gameSelect.select.invalidPath = Chemin non valide
+gamePath.select.noneChosen = Vous n'avez pas préciser le dossier du jeu \!
+gamePath.select.noValidExe = L'emplacement spécifié ne contient pas de Supreme Commander.exe valide et n'est donc pas une installation Forged Alliance valide.
+gamePath.select.vanillaGameSelected = Le chemin choisi est celui du jeu de base, vous devez selectionner celui de Forged Alliance
+gamePath.select.fafDataSelected = L'emplacement spécifié est le répertoire de données du jeu Forged Alliance Forever, veuillez plutôt sélectionner l'installation Forged Alliance.\n\n
+gamePath.select.error = Une erreur s'est produite lors de la sélection du chemin du jeu
+main.news = Nouveautés
+game.create.generatedMapNew = NOUVEAU
+game.create.defaultGameTypeMarker = (default)
+# Fuzzy
+settings.general.startTab = Sélectionnez l'onglet à partir duquel
+startTab.selectTab = Sélectionnez l'onglet pour commencer\:
+startTab.message = Ici, vous pouvez sélectionner l'onglet dans lequel votre client démarre. Vous pourrez le modifier plus tard dans les paramètres si vous le souhaitez
+startTab.title = Sélectionnez l'onglet de démarrage
+startTab.save = Sauvegarder
+startTab.wantToConfigure = Sélectionnez l'onglet pour commencer\:
+startTab.configure = Configurer
