Update messages_de.properties (POEditor.com)

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -427,17 +427,22 @@ settings.windowTitle = Einstellungen
 settings.general = Allgemein
 settings.general.rememberLastTab = Zuletzt geöffneten Tab merken
 settings.chat = Chat
+# Fuzzy
 settings.chat.maxMessages = Grösse des Nachrichtenverlaufs
 settings.chat.previews = Vorschau
+# Fuzzy
 settings.chat.previewImages = Vorschaubiler für Internet-Links anzeigen
 settings.chat.colors = Farben
+# Fuzzy
 settings.chat.timeFormat = Zeitformat
 settings.chat.colorMode.default = Standard\: Benutze Standardfarben für alle Benutzer
 settings.chat.colorMode.custom = Benutzerdefiniert\: Erlaube benutzerdefinierte Farben für spezifische Benutzer
 settings.chat.colorMode.random = Zufall\: Jeder Benutzer erhält eine eindeutige, zufällige Farbe
 settings.chat.foes = Feinde
+# Fuzzy
 settings.chat.hideFoe = Verstecke Nachrichten von Feinden
 settings.notifications = Benachrichtigungen
+# Fuzzy
 settings.notifications.enableNotifications = Aktiviere Benachrichtigungen
 settings.notifications.toastPosition = Position von Benachrichtigungen
 settings.notifications.toastScreen = Bildschirm
@@ -447,12 +452,16 @@ settings.notifications.ranked1v1 = Gewertetes 1v1 verfügbar
 # I would look for a better, more specific German word for "sound".
 settings.sounds = Sounds
 # I would look for a better, more specific German word for "sound".
+# Fuzzy
 settings.sounds.enable = Erlaube Sounds
 settings.fa.title = Forged Alliance Forever
 settings.fa.gameConfiguration = Spielkonfiguration
+# Fuzzy
 settings.fa.autoDownloadMaps = Lade benötigte Karten automatisch herunter
 settings.fa.gamePort = Spiel-Port
+# Fuzzy
 settings.fa.gameLocation = Spielverzeichnis
+# Fuzzy
 settings.fa.executableDecorator = Kommandozeilenformat für die Ausführbare Datei
 settings.fa.executionDirectory = Ausführungsverzeichnis
 settings.fa.advanced = Fortgeschritten
@@ -540,6 +549,7 @@ userInfo.nameHistory.date = Zeitpunkt der Änderung
 userInfo.nameHistory.noHistory = Benutzer hat seinen Namen nicht geändert
 userInfo.nameHistory.name = Name
 userInfo.nameHistory.errorLoading = Names Verlauf konnte nicht geladen werden.
+# Fuzzy
 settings.chat.notifyOnAtMentionOnly = Nur benachrichtigen, wenn erwähnt mit @username
 settings.chat.notifications = Benachrichtigungen
 mod.displayName = Name
@@ -577,6 +587,7 @@ menu.connect = Verbinde
 gameChosen.invalidPath = Ungültiger Pfad
 gameChosen.couldNotLocatedGame = Das gewählte Verzeichnis beinhaltet keine gültige Supreme Commander\: Forged Alliance Installation.
 userInfo.statistics.errorLoading = Konnte Statistiken nicht laden
+# Fuzzy
 settings.general.unitDatabase = Unit database
 unitDatabase.rackover = Rackover
 unitDatabase.spooky = Spooky
@@ -607,6 +618,7 @@ settings.notifications.toastPreview.title = Popup Vorschau
 settings.notifications.toastPreview.text = So sieht es aus.
 settings.language.helpUs.text = Die Übersetzung von Downlord's Client ist ein Gemeinschaftsprojekt. Wenn du eine Übersetzung in eine andere Sprache haben wünscht, dann würden wir uns über Deine Hilfe freuen.
 settings.language.helpUs.button = Hilf bei der Übersetzung
+# Fuzzy
 settings.chat.chatFormat = Chatformat
 settings.chat.chatFormat.extended = Erweitert
 settings.chat.chatFormat.compact = Kompakt
@@ -645,14 +657,15 @@ map.couldNotHide = Konnte Karte nicht verstecken.
 map.couldNotUnrank = Konnte Map nicht als ungewertet markieren.
 modVersion.ranked = Gewertet
 game.missionName = Mission
-settings.appearance.backgroundImage = Hintergrundbild
+settings.appearance.backgoundImage = Hintergrundbild
 settings.appearance.useDefaultImage = Benutze Standardbild
 settings.appearance.chooseImage = Wähle ein Bild
 settings.general.theme.useNoImage = Kein Bild
 query.notContains = beinhaltet nicht
 coop.unknownMission = Unbekannt Mission
 game.couldNotJoin = Konnte Spiel mit id ''{0}'' nicht beitreten.
-settings.general.disallowDiscordJoins = Verbieten Spielern über Discord deinem Spiel beizutreten.
+discord.disallowJoins = Verbieten Spielern über Discord deinem Spiel beizutreten.
+# Fuzzy
 replay.couldNotOpen = Replay mit id ''{0}'' konnte nicht geöffnet werden.
 view.showSidePane = Zeige Details
 view.hideSidePane = Verstecke Details
@@ -660,7 +673,7 @@ view.hideSidePane = Verstecke Details
 menu.revealReplayFolder = Öffne Replay Ordner
 # Fuzzy
 menu.revealGamePrefsFile = Öffne game.pref Ordner
-ranked1v1.queuePopTimer = Paare in {0,number,0}\:{1,number,00}
+ranked1v1.queuePopTimer = Matche in {0,number,0}\:{1,number,00}
 # Fuzzy
 game.create.generatedMap = Generiere Karte
 game.avgRating.format = {0,number,\#}
@@ -684,9 +697,11 @@ mapVault.recommended = M&M Team Favoriten
 settings.appearance.useNone = Kein Bild
 settings.chat.addAutoJoinChannel = Kanal hinzufügen
 settings.chat.removeAutoJoinChannel = Entfernen
+# Fuzzy
 settings.chat.autoJoinChannelList = Beizutretende Kanäle
 settings.chat.autoJoinChannelPrompt = Kanal zum Beitreten (\#kanal_name)
-settings.fa.forceRelay = Erzwinge "relay" Verbinung
+# Fuzzy
+settings.fa.forceRelay = Erzwinge "relay" Verbindung
 game.player.globalRating = Das globale Rating eines Spielers
 game.player.ladderRating = Das 1v1 Rating eines Spielers
 userInfo.foe = Dieser Spieler ist ihr Feind.
@@ -730,7 +745,9 @@ mapVault.installationFailed = Das Installieren der Karte ''{0}'' ist fehlgeschla
 tutorial.loading = Tutorials laden
 tutorial.noneAvailable = Es gibt zur Zeit keine Tutorials
 clientUpdateAvailable.prereleaseNotification = Prerelease {0} is available ({1})
+# Fuzzy
 settings.checkForPrerelease = Auf vorläufige Versionen prüfen
+# Fuzzy
 settings.prereleaseFeedback = Feedback zu vorläufigen Versionen geben (Discord)
 settings.giveFeedback = Öffnen
 server.kicked.title = Du wurdest vom Server entfernt
@@ -756,3 +773,24 @@ replay.abortAfterMapNotFound = Abbrechen und mehr Information
 replay.mapDownloadFailed = Karten laden fehlgeschlagen für dieses Replay
 replay.mapDownloadFailed.wannaContinue = Wir konnten die passende Karte zu diesem Replay nicht finden. Dies ist lediglich eine Warnung, die kannst trotzdem versuchen das Replay zu starten.
 map.unknown = unbekannt
+settings.account.goWebsite = Für administrativen Tätigkeiten bezüglich deines Accounts musst du unsere Webseite besuchen.
+# Fuzzy
+settings.account.goWebsiteButton = Gehe zu faforever.com
+map.versionId = Kartenversions ID
+vault.replays.ownReplays = Deine Replays
+modVault.details.uploader = Hochgeladen von\: {0}
+modVault.details.author = Author\: {0}
+gameSelect.select.invalidPath = Invalider Pfad
+gamePath.select.noneChosen = Du hast den Ort deines Spiels nicht angegeben\!
+gamePath.select.noValidExe = Der angegebene Speicherort enthält keine gültige Supreme Commander.exe und ist daher keine gültige Forged Alliance-Installation.
+gamePath.select.vanillaGameSelected = Der angegebene Speicherort ist eine Vanilla Installation, Sie müssen die Erweiterung Supreme Commander Forged Alliance auswählen.
+gamePath.select.fafDataSelected = Der angegebene Speicherort ist das Forged Alliance Forever-Spieldatenverzeichnis, bitte wählen Sie stattdessen die Forged Alliance-Installation.
+gamePath.select.error = Etwas ging schief, bei der Auswahl des Spielverzeichnis
+main.news = Nachrichten
+game.create.generatedMapNew = NEU
+game.create.defaultGameTypeMarker = (Voreinstellung)
+settings.general.startTab = Starter "Tab"
+startTab.selectTab = Wählen Sie den "Tab", mit dem Sie beginnen möchten\:
+startTab.message = Hier können Sie den "Tab" auswählen, mit dem der Client startet. Sie können dies später in den Einstellungen ändern, wenn Sie möchten.
+startTab.save = Speichern
+vault.replays.onlyShowLastYear = Nur ein Jahr alte
